k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: mobiwave
  labels:
    name: mobiwave
    environment: production
